--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,13 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.2.0",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@azure/msal-angular": "^2.5.3",
+    "@azure/msal-browser": "^2.33.0",
     "bootstrap": "^5.2.3",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
