--- a/Asset_Management/appsettings.json
+++ b/Asset_Management/appsettings.json
@@ -5,12 +5,12 @@ before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
   "AzureAd": {
+    "scopes": "api.scope",
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
     "TenantId": "8c3dad1d-b6bc-4f8b-939b-8263372eced6",
     "ClientId": "dd9aac19-d0bb-47d7-a7a3-f236efb5d79b",
 
-    "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
   },
   "Logging": {
