--- a/GridView/angular.json
+++ b/GridView/angular.json
@@ -69,6 +69,9 @@
               "browserTarget": "GridView:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy.config.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
