--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^15.0.0",
     "@azure/msal-angular": "^2.5.3",
     "@azure/msal-browser": "^2.33.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
