--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.10.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
