--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,9 +23,19 @@
     "@azure/msal-angular": "^2.5.3",
     "@azure/msal-browser": "^2.33.0",
     "@popperjs/core": "^2.11.6",
+    "@progress/kendo-angular-charts": "^11.4.0",
+    "@progress/kendo-angular-common": "11.4.0",
+    "@progress/kendo-angular-intl": "11.4.0",
+    "@progress/kendo-angular-l10n": "11.4.0",
+    "@progress/kendo-angular-popup": "11.4.0",
+    "@progress/kendo-common": "^0.2.2",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-theme-default": "^6.0.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.2.1",
+    "hammerjs": "^2.0.0",
     "ng2-charts": "^4.1.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
@@ -38,6 +48,7 @@
     "@angular-devkit/build-angular": "^15.0.1",
     "@angular/cli": "~15.0.1",
     "@angular/compiler-cli": "^15.0.0",
+    "@angular/localize": "^15.1.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
