--- a/GridView/package.json
+++ b/GridView/package.json
@@ -15,21 +15,18 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/localize": "^15.2.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@progress/kendo-angular-grid": "^11.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-drawing": "^1.17.2",
-    "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-angular-buttons": "11.2.0",
+    "@progress/kendo-angular-charts": "^11.2.0",
     "@progress/kendo-angular-common": "11.2.0",
     "@progress/kendo-angular-dateinputs": "11.2.0",
+    "@progress/kendo-angular-dialog": "11.2.0",
     "@progress/kendo-angular-dropdowns": "11.2.0",
     "@progress/kendo-angular-excel-export": "11.2.0",
+    "@progress/kendo-angular-grid": "^11.2.0",
     "@progress/kendo-angular-icons": "11.2.0",
     "@progress/kendo-angular-inputs": "11.2.0",
     "@progress/kendo-angular-intl": "11.2.0",
@@ -38,10 +35,15 @@
     "@progress/kendo-angular-pdf-export": "11.2.0",
     "@progress/kendo-angular-popup": "11.2.0",
     "@progress/kendo-angular-treeview": "11.2.0",
-    "@progress/kendo-angular-dialog": "11.2.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^1.0.0",
-    "@angular/localize": "^15.0.0",
-    "@progress/kendo-theme-default": "^6.0.2"
+    "@progress/kendo-theme-default": "^6.0.2",
+    "hammerjs": "^2.0.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.1",
