--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.2.1",
     "hammerjs": "^2.0.0",
+    "ng-confirm-box": "^0.0.6",
     "ng2-charts": "^4.1.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
