--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,6 +42,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
+    "tsc-ui": "^0.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
